chart/jenkins-k8s/deployment-jenkins.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
          - name: test-volume
            mountPath: /mnt
    volumes:
      - name: test-volume
        awsElasticBlockStore:
          volumeID: vol-072118726b2f56829
          fsType: ext4
